tests/negative_tests/syntax_errors/missing_comma_params.c
// INVALID - Syntax Error: missing comma between parameters
// Expected: "expected ',' or ')'"
int foo(int x int y) {  // ERROR: missing comma
    return x + y;
}
